# First-Bevy-Project

./: Cargo.toml
.cargo/: config.toml
src/: custom_events.rs  fns.rs  main.rs  misc.rs  prelude.rs  settings.rs
src/player_mod/: mod.rs  player.rs  player_data.rs
src/room_generation_mod/: mod.rs  room_generation.rs  room_generation_data.rs
